--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
     "styled-components": "^5.3.11",
+    "webpack": "^5.87.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
