--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
+    "npm": "^9.7.1",
     "query-string": "^8.1.0",
     "querystring": "^0.2.1",
     "querystring-es3": "^0.2.1",
@@ -26,12 +27,12 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
     "styled-components": "^5.3.11",
-    "webpack": "^5.87.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
     "prettier": "^2.8.8",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "webpack": "^5.87.0"
   },
   "keywords": [
     "gatsby"
