--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
-    "styled-components": "^5.3.11",
-    "webpack-filter-warnings-plugin": "^1.2.1"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "prettier": "^2.8.8",
