--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
-    "webpack": "^5.87.0"
+    "webpack": "^5.87.0",
+    "webpack-dev-server": "^4.15.1"
   },
   "keywords": [
     "gatsby"
