--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel-loader": "^9.1.2",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
-    "webpack": "^4.0.0",
+    "webpack": "^5.87.0",
     "webpack-dev-server": "^4.15.1"
   },
   "keywords": [
