--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@babel/types": "^7.22.5",
     "@emailjs/browser": "^3.11.0",
     "@gatsbyjs/reach-router": "^2.0.1",
+    "babel-plugin-styled-components": "^2.1.3",
     "bootstrap": "^5.3.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-manifest": "^5.11.0",
     "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-styled-components": "^6.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
     "npm": "^9.7.1",
@@ -24,9 +26,8 @@
     "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
-    "styled-components": "^5.3.11",
+    "styled-components": "^6.0.0-rc.3",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
@@ -34,7 +35,6 @@
     "@babel/preset-env": "^7.22.5",
     "babel-loader": "^9.1.2",
     "prettier": "^2.8.8",
-    "style-loader": "^3.3.3",
     "webpack": "^5.87.0",
     "webpack-dev-server": "^4.15.1"
   },
