--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/types": "^7.22.5",
     "@emailjs/browser": "^3.11.0",
     "@gatsbyjs/reach-router": "^2.0.1",
+    "babel-plugin-styled-components": "^2.1.3",
     "bootstrap": "^5.3.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
@@ -26,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
+    "styled-components": "^6.0.0-rc.3",
     "webpack": "^4.46.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
