--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.13.0",
     "webpack": "^4.46.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
